horizontal scrollbar width fixed

--- a/src/components/MesDataGrid/styles.css
+++ b/src/components/MesDataGrid/styles.css
@@ -9,16 +9,17 @@
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow:0
+  -webkit-box-shadow: 0;
 }
 
 ::-webkit-scrollbar {
-width: 6px;
-/* background-color: #f00000; */
+  width: 6px;
+  height:4px;
+  /* background-color: #f00000; */
 }
 ::-webkit-scrollbar-thumb {
-border-radius: 10px;
-height:35px;
-/* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-background-color: #D9D9D9;
+  border-radius: 10px;
+  height: 35px;
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  background-color: #d9d9d9;
 }
